--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,7 +42,8 @@
       <a href="{{ tab.url | relative_url }}" class="nav-link">
         {% capture tab_name %}{{ tab.url | split: '/' }}{% endcapture %}
 
-        <span>{{ site.data.locales[site.lang].tabs.[tab_name] | default: tab.title | upcase }}</span>
+        <!---<span>{{ site.data.locales[site.lang].tabs.[tab_name] | default: tab.title | upcase }}</span>--->
+        <span>{{ tab.title | upcase}}</span>
       </a>
     </li> <!-- .nav-item -->
     {% endfor %}
